# RatSLAM-extension-using-LiDAR-data

./: README.md
my_simulation/: CMakeLists.txt  package.xml
my_simulation/launch/: my_world.launch
my_simulation/worlds/: my_world.world
ratslam_ros/: CMakeLists.txt  my_new_world.world  package.xml
ratslam_ros/config/: config_change_log.txt  config_myrat.txt.in  config_ratfusion.txt.in
ratslam_ros/launch/: irataus.launch  myrat.launch  ratfusion.launch
ratslam_ros/src/: backup_lv_laser.cpp  main_gt.cpp  main_lv.cpp  main_lv_laser.cpp
ratslam_ros/src/graphics/: ground_truth_scene.h
ratslam_ros/src/ratslam/: ground_truth.cpp  ground_truth.h  local_view_match.cpp  local_view_match_laser.cpp  local_view_match_laser.h
turtlebot3_simulations/turtlebot3_gazebo/models/mycamera/: model.config  model.sdf
